tests/expected_invalid_affine_after_match.diag.out
<input>:25:5: error: affine value 'ticket' was already moved
        ticket
        ^^^^^^
<input>:21:11: note: 'ticket' was previously moved here
        match ticket {
              ^^^^^^
